--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
         run: make test-import
 
   build:
-    name: Build package, including generated API
+    name: Build package, incl. API generation
     needs: [smoke-tests]
     runs-on: ubuntu-latest
 
@@ -122,24 +122,15 @@ jobs:
           SYC_LAUNCH_CONTAINER: 1
           SYC_IMAGE_TAG: v23.1.0
 
-      - name: Rebuild/reinstall wheel containing generated API
-        run: |
-          rm -rf dist
-          make build-install
+      - name: Clean out dist
+        run: rm -rf dist
 
-      - name: Check package
-        run: |
-          pip install twine
-          twine check dist/*
-
-      - name: Upload package
-        uses: actions/upload-artifact@v3
+      - name: Build library source and wheel artifacts
+        uses: pyansys/actions/build-library@v3
         with:
-          name: ${{ env.PACKAGE_NAME }}-artifacts
-          path: |
-            dist/*.whl
-            dist/*.tar.gz
-          retention-days: 7
+          checkout: false
+          library-name: ${{ env.PACKAGE_NAME }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   test:
     name: Testing
