--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,3 +87,6 @@ name = "ansys.systemcoupling.core"
 
 [project.urls]
 Source = "https://github.com/pyansys/pysystem-coupling/"
+Homepage = "https://github.com/pyansys/pysystem-coupling/"
+Documentation = "https://systemcoupling.docs.pyansys.com/"
+Tracker = "https://github.com/pyansys/pysystem-coupling/issues"
