--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,11 +18,6 @@ repos:
   rev: 5.11.4
   hooks:
   - id: isort
-    args: [
-    "--profile", "black",
-    "--force-sort-within-sections",
-    "--skip-glob", "*__init__.py",
-    ]
 
 - repo: https://github.com/PyCQA/flake8
   rev: 6.0.0
@@ -33,6 +28,7 @@ repos:
   rev: v2.2.2
   hooks:
   - id: codespell
+    args: ["--ignore-words", "doc/styles/Vocab/ANSYS/accept.txt"]
 
 # add this eventually
 # - repo: https://github.com/pycqa/pydocstyle
