DOC: Vocab dir Syc -> ANSYS

--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -20,7 +20,7 @@ WordTemplate = \b(?:%s)\b
 Packages = Google
 
 # Define the System Coupling vocabulary
-Vocab = SyC
+Vocab = ANSYS
 
 [*.{md,rst}]
 
