--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,3 +87,19 @@ name = "ansys.systemcoupling.core"
 
 [project.urls]
 Source = "https://github.com/pyansys/pysystem-coupling/"
+Homepage = "https://github.com/pyansys/pysystem-coupling/"
+Documentation = "https://systemcoupling.docs.pyansys.com/"
+Tracker = "https://github.com/pyansys/pysystem-coupling/issues"
+
+[tool.isort]
+profile = "black"
+force_sort_within_sections = true
+default_section = "THIRDPARTY"
+skip_glob = ["*__init__.py"]
+filter_files = "true"
+src_paths = ["doc", "src", "tests"]
+
+[tool.coverage.run]
+omit = [
+    "*/adaptor/api/*",
+]
