--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -244,7 +244,7 @@ jobs:
       - name: Upload PDF Documentation
         uses: actions/upload-artifact@v3
         with:
-          name: Documentation-pdf
+          name: documentation-pdf
           path: doc/_build/latex/*.pdf
           retention-days: 7
 
