--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ maintainers = [
     {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
 ]
 dependencies = [
+	"ansys-api-systemcoupling==0.1.0",
 	"grpcio>=1.30.0",
 	"grpcio-status>=1.30.0,<1.51.2",
 	"googleapis-common-protos>=1.50.0",
