--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
       - main
 
 env:
+  PROJECT_NAME: 'PySystemCoupling'
   MAIN_PYTHON_VERSION: "3.8"
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
@@ -40,7 +41,7 @@ jobs:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   smoke-tests:
-    name: Smoke Tests
+    name: Build and smoke tests
     needs: [style]
     runs-on: ${{ matrix.os }}
     strategy:
@@ -50,36 +51,13 @@ jobs:
         python-version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: "Build wheelhouse and perform smoke test"
+        uses: pyansys/actions/build-wheelhouse@v3
         with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          library-namespace: ${{ env.PACKAGE_NAMESPACE }}
+          operating-system: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
-
-      - name: Linux pip cache
-        uses: actions/cache@v3
-        if: ${{ runner.os == 'Linux' }}
-        with:
-          path: ~/.cache/pip
-          key: Python-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            Python-${{ runner.os }}-${{ matrix.python-version }}
-
-      - name: Windows pip cache
-        uses: actions/cache@v3
-        if: ${{ runner.os == 'Windows' }}
-        with:
-          path: ~\AppData\Local\pip\Cache
-          key: Python-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            Python-${{ runner.os }}-${{ matrix.python-version }}
-
-      - name: Install pysystemcoupling
-        run: make build-install
-
-      - name: Test import
-        run: make test-import
 
   build:
     name: Build package, incl. API generation
