--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,13 @@ on:
       - main
 
 env:
-  PROJECT_NAME: 'PySystemCoupling'
   MAIN_PYTHON_VERSION: "3.8"
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -242,57 +241,23 @@ jobs:
         uses: pyansys/actions/release-github@v3
         with:
           library-name: ${{ env.PACKAGE_NAME }}
+      
+      - name: "Release to the public PyPI repository"
+        uses: pyansys/actions/release-pypi-public@v3
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          twine-username: "__token__"
+          twine-token: ${{ secrets.PYPI_TOKEN }}
 
-
-  # release:
-  #   if: contains(github.ref, 'refs/tags')
-  #   needs: [package]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: 3.9
-
-  #     - uses: actions/checkout@v3
-
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: ansys-systemcoupling-core-wheel
-
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: Documentation-pdf
-
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: Documentation-html
-  #         path: ~/html
-
-  #     # list current directory
-  #     - name: List directory structure
-  #       run: ls -R
-
-  #     - name: Deploy
-  #       uses: JamesIves/github-pages-deploy-action@v4.4.1
-  #       with:
-  #         BRANCH: gh-pages
-  #         FOLDER: ~/html
-  #         CLEAN: true
-
-  #     # note how we use the PyPI tokens
-  #     - name: Upload to Azure PyPI (disabled)
-  #       run: |
-  #         pip install twine
-  #         # twine upload --skip-existing ./**/*.whl
-  #       env:
-  #         TWINE_USERNAME: __token__
-  #         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-
-  #     - name: Release
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         files: |
-  #           ./**/*.whl
-  #           ./**/*.zip
-  #           ./**/*.pdf
+  upload_docs_release:
+    name: "Upload release documentation"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: [release]
+    steps:
+      - name: Deploy the stable documentation
+        uses: pyansys/actions/doc-deploy-stable@v3
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
