--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -245,6 +245,7 @@ jobs:
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
+      - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
 
       - name: Display structure of downloaded files
