--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -40,7 +40,7 @@ jobs:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   smoke-tests:
-    name: Smoke Tests
+    name: Build and smoke tests
     needs: [style]
     runs-on: ${{ matrix.os }}
     strategy:
@@ -50,40 +50,13 @@ jobs:
         python-version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: "Build wheelhouse and perform smoke test"
+        uses: pyansys/actions/build-wheelhouse@v3
         with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          library-namespace: ${{ env.PACKAGE_NAMESPACE }}
+          operating-system: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
-
-      - name: Linux pip cache
-        uses: actions/cache@v3
-        if: ${{ runner.os == 'Linux' }}
-        with:
-          path: ~/.cache/pip
-          key: Python-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            Python-${{ runner.os }}-${{ matrix.python-version }}
-
-      - name: Windows pip cache
-        uses: actions/cache@v3
-        if: ${{ runner.os == 'Windows' }}
-        with:
-          path: ~\AppData\Local\pip\Cache
-          key: Python-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            Python-${{ runner.os }}-${{ matrix.python-version }}
-
-      - name: Install pysystemcoupling
-        run: make build-install
-
-      - name: Install gRPC API from private PyPI (temp)
-        run: |
-          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
-
-      - name: Test import
-        run: make test-import
 
   build:
     name: Build package, incl. API generation
@@ -99,10 +72,6 @@ jobs:
 
       - name: Create initial wheel and install
         run: make build-install
-
-      - name: Install gRPC API from private PyPI (temp - remove when API is released)
-        run: |
-          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -154,10 +123,6 @@ jobs:
         run: |
           wheel_name=`echo dist/*.whl`
           pip install -q --force-reinstall ${wheel_name}[tests] > /dev/null
-
-      - name: Install gRPC API from private PyPI (temp - remove when API is released)
-        run: |
-          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -211,10 +176,6 @@ jobs:
           wheel_name=`echo dist/*.whl`
           pip install -q --force-reinstall ${wheel_name}[doc] > /dev/null
 
-      - name: Install gRPC API from private PyPI (temp - remove when API is released)
-        run: |
-          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
-
       - name: Build HTML
         run: |
           make -C doc clean
@@ -258,11 +219,6 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           doc-artifact-name: "documentation-html"
 
-  # This is currently broken - the pyansys/actions expect PDF doc to be
-  # built and we can't currently build it. If we can't fix that then
-  # either the actions need to make PDF optional or we revert to more
-  # explicit implementation like the one commented out below. Note that
-  # that itself needs some attention if uncommented.
   release:
     name: Release project
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
@@ -276,61 +232,42 @@ jobs:
           twine-username: "__token__"
           twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
 
-      - name: Release to GitHub
-        uses: pyansys/actions/release-github@v3
+      - name: "Release to the public PyPI repository"
+        uses: pyansys/actions/release-pypi-public@v3
         with:
           library-name: ${{ env.PACKAGE_NAME }}
+          twine-username: "__token__"
+          twine-token: ${{ secrets.PYPI_TOKEN }}
 
+      # TODO: We can't use pyansys/actions/release-github as it assumes PDF doc.
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  # release:
-  #   if: contains(github.ref, 'refs/tags')
-  #   needs: [package]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: 3.9
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
 
-  #     - uses: actions/checkout@v3
+      - name: Display structure of downloaded files
+        run: ls -R
 
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: ansys-systemcoupling-core-wheel
+      - name: "Release to GitHub"
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ./**/*.whl
+            ./**/*.tar.gz
+            documentation-html 
 
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: Documentation-pdf
-
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: Documentation-html
-  #         path: ~/html
-
-  #     # list current directory
-  #     - name: List directory structure
-  #       run: ls -R
-
-  #     - name: Deploy
-  #       uses: JamesIves/github-pages-deploy-action@v4.4.1
-  #       with:
-  #         BRANCH: gh-pages
-  #         FOLDER: ~/html
-  #         CLEAN: true
-
-  #     # note how we use the PyPI tokens
-  #     - name: Upload to Azure PyPI (disabled)
-  #       run: |
-  #         pip install twine
-  #         # twine upload --skip-existing ./**/*.whl
-  #       env:
-  #         TWINE_USERNAME: __token__
-  #         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-
-  #     - name: Release
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         files: |
-  #           ./**/*.whl
-  #           ./**/*.zip
-  #           ./**/*.pdf
+  upload_docs_release:
+    name: "Upload release documentation"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: [release]
+    steps:
+      - name: Deploy the stable documentation
+        uses: pyansys/actions/doc-deploy-stable@v3
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
