--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "flit_core.buildapi"
 [project]
 # Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
 name = "ansys-systemcoupling-core"
-version = "0.1.0"
-description = "A Python wrapper for Ansys MAPDL."
+version = "0.1.1"
+description = "A Python wrapper for Ansys System Coupling."
 readme = "README.rst"
 requires-python = ">=3.7"
 license = {file = "LICENSE"}
