--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,7 @@
 comment:
   layout: "diff"
   behavior: default
+  require_changes: true # Post coverage comment only if coverage changes
 
 coverage:
   status:
@@ -20,4 +21,3 @@ coverage:
         if_not_found: success
         if_ci_failed: error
         if_no_uploads: error
-       
