--- a/codecov.yml
+++ b/codecov.yml
@@ -1,13 +1,14 @@
 comment:
   layout: "diff"
   behavior: default
+  require_changes: true # Post coverage comment only if coverage changes
 
 coverage:
   status:
     project:
       default:
         # basic
-        target: 95%
+        target: 85%
         threshold: 10%
         # advanced
         if_not_found: success
@@ -20,4 +21,3 @@ coverage:
         if_not_found: success
         if_ci_failed: error
         if_no_uploads: error
-       
