fix: test the pdf

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -29,5 +29,5 @@ clean:
 # Create PDF
 pdf:
 	@$(SPHINXBUILD) -M latex "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
-	cd $(BUILDDIR)/latex && latexmk -r latexmkrc -pdf *.tex -interaction=nonstopmode || true
-	(test -f ansys-systemcoupling-core*.pdf && echo pdf exists) || exit 1
+	cd $(BUILDDIR)/latex && latexmk -r latexmkrc -pdf *.tex -interaction=nonstopmode -f || true
+	(test -f $(BUILDDIR)/latex/ansys-systemcoupling-core*.pdf && echo pdf exists) || exit 1
