Re-enable pdf doc build (#86)
* try re-enable pdf build

* add missing env var

* try using pygeometry approach to pdf build

* incorrect build dir?

* missing dependency

* Try to build pdf with ansys-sphinx theme

* remove the changes

* Update .github/workflows/ci.yml

Co-authored-by: Jorge Martínez <28702884+jorgepiloto@users.noreply.github.com>

* Add extended memory

* feat: add the morefloat

* feat: add more mem

* fix: test the pdf

* fix: test the pdf

* Update .github/workflows/ci.yml

Co-authored-by: Jorge Martínez <28702884+jorgepiloto@users.noreply.github.com>

---------

Co-authored-by: Revathy Venugopal <104772255+Revathyvenugopal162@users.noreply.github.com>
Co-authored-by: Revathyvenugopal162 <revathy.venugopal@ansys.com>
Co-authored-by: Jorge Martínez <28702884+jorgepiloto@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,6 +185,17 @@ jobs:
         env:
           PYSYC_DOC_BUILD_VERSION: 23_1
 
+      - name: Build PDF Documentation
+        run: |
+          sudo apt update
+          sudo apt-get install -y texlive-latex-extra latexmk
+          make -C doc pdf SPHINXERRWARN=""
+        env:
+          PYSYC_DOC_BUILD_VERSION: 23_1
+          extra_mem_bot: 10000000
+          extra_mem_top: 15000000
+
+
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
         with:
@@ -192,21 +203,14 @@ jobs:
           path: doc/_build/html
           retention-days: 7
 
-      # This build errors on GitHub so disable for now
-      # ==============================================
 
-      # - name: Build PDF Documentation
-      #   run: |
-      #     sudo apt update
-      #     sudo apt-get install -y texlive-latex-extra latexmk
-      #     make -C doc latexpdf SPHINXERRWARN=""
+      - name: Upload PDF Documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation-pdf
+          path: doc/_build/latex/*.pdf
+          retention-days: 7
 
-      # - name: Upload PDF Documentation
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Documentation-pdf
-      #     path: doc/_build/latex/*.pdf
-      #     retention-days: 7
 
   upload_dev_docs:
     name: Upload dev documentation
