--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,7 +152,7 @@ jobs:
           path: cov_html
           retention-days: 7
 
-  docs:
+  docs-build:
     name: Build Documentation
     needs: [doc-style, build]
     runs-on: ubuntu-latest
@@ -213,7 +213,7 @@ jobs:
     name: Upload dev documentation
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [docs]
+    needs: [docs-build]
     steps:
       - name: Deploy the latest documentation
         uses: pyansys/actions/doc-deploy-dev@v4
@@ -225,16 +225,9 @@ jobs:
   release:
     name: Release project
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    needs: [test, docs]
+    needs: [test, docs-build]
     runs-on: ubuntu-latest
     steps:
-      - name: Release to the private PyPI repository
-        uses: pyansys/actions/release-pypi-private@v4
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          twine-username: "__token__"
-          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
-
       - name: "Release to the public PyPI repository"
         uses: pyansys/actions/release-pypi-public@v4
         with:
@@ -262,7 +255,7 @@ jobs:
             ./**/*.tar.gz
             documentation-html 
 
-  upload_docs_release:
+  upload_docs_stable:
     name: "Upload release documentation"
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
