--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "PySystemCoupling documentation style checks"
-        uses: pyansys/actions/doc-style@v3
+        uses: pyansys/actions/doc-style@v4
         with:
           token: ${{ secrets.GH_TOKEN }}
 
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: PyAnsys code style checks
-        uses: pyansys/actions/code-style@v3
+        uses: pyansys/actions/code-style@v4
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
@@ -51,7 +51,7 @@ jobs:
 
     steps:
       - name: "Build wheelhouse and perform smoke test"
-        uses: pyansys/actions/build-wheelhouse@v3
+        uses: pyansys/actions/build-wheelhouse@v4
         with:
           library-name: ${{ env.PACKAGE_NAME }}
           library-namespace: ${{ env.PACKAGE_NAMESPACE }}
@@ -142,9 +142,8 @@ jobs:
         env:
           SYC_IMAGE_TAG: v23.1.0
 
-      # Codecov not available until we are public
-      #- name: Upload coverage to Codecov
-      #  uses: codecov/codecov-action@v2
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
 
       - name: Upload test coverage
         uses: actions/upload-artifact@v3
@@ -153,7 +152,7 @@ jobs:
           path: cov_html
           retention-days: 7
 
-  docs:
+  docs-build:
     name: Build Documentation
     needs: [doc-style, build]
     runs-on: ubuntu-latest
@@ -183,6 +182,17 @@ jobs:
         env:
           PYSYC_DOC_BUILD_VERSION: 23_1
 
+      - name: Build PDF Documentation
+        run: |
+          sudo apt update
+          sudo apt-get install -y texlive-latex-extra latexmk
+          make -C doc pdf SPHINXERRWARN=""
+        env:
+          PYSYC_DOC_BUILD_VERSION: 23_1
+          extra_mem_bot: 10000000
+          extra_mem_top: 15000000
+
+
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
         with:
@@ -190,30 +200,23 @@ jobs:
           path: doc/_build/html
           retention-days: 7
 
-      # This build errors on GitHub so disable for now
-      # ==============================================
 
-      # - name: Build PDF Documentation
-      #   run: |
-      #     sudo apt update
-      #     sudo apt-get install -y texlive-latex-extra latexmk
-      #     make -C doc latexpdf SPHINXERRWARN=""
+      - name: Upload PDF Documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation-pdf
+          path: doc/_build/latex/*.pdf
+          retention-days: 7
 
-      # - name: Upload PDF Documentation
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Documentation-pdf
-      #     path: doc/_build/latex/*.pdf
-      #     retention-days: 7
 
   upload_dev_docs:
     name: Upload dev documentation
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [docs]
+    needs: [docs-build]
     steps:
       - name: Deploy the latest documentation
-        uses: pyansys/actions/doc-deploy-dev@v3
+        uses: pyansys/actions/doc-deploy-dev@v4
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GH_TOKEN }}
@@ -222,18 +225,11 @@ jobs:
   release:
     name: Release project
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    needs: [test, docs]
+    needs: [test, docs-build]
     runs-on: ubuntu-latest
     steps:
-      - name: Release to the private PyPI repository
-        uses: pyansys/actions/release-pypi-private@v3
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          twine-username: "__token__"
-          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
-
       - name: "Release to the public PyPI repository"
-        uses: pyansys/actions/release-pypi-public@v3
+        uses: pyansys/actions/release-pypi-public@v4
         with:
           library-name: ${{ env.PACKAGE_NAME }}
           twine-username: "__token__"
@@ -259,14 +255,14 @@ jobs:
             ./**/*.tar.gz
             documentation-html 
 
-  upload_docs_release:
+  upload_docs_stable:
     name: "Upload release documentation"
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: [release]
     steps:
       - name: Deploy the stable documentation
-        uses: pyansys/actions/doc-deploy-stable@v3
+        uses: pyansys/actions/doc-deploy-stable@v4
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
