--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ env:
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
+  DOC_BUILD_SYC_VERSION: 23_2
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -88,7 +89,7 @@ jobs:
       - name: Generate API for v232
         uses: ./.github/actions/generate-api
         with:
-          image-tag: latest
+          image-tag: v23.2.0
 
       - name: Clean out dist
         run: rm -rf dist
@@ -142,7 +143,7 @@ jobs:
       - name: Unit Test v23.2.0
         uses: ./.github/actions/unit-test
         with:
-          image-tag: latest
+          image-tag: v23.2.0
           upload-coverage: false
 
 
@@ -174,7 +175,7 @@ jobs:
           make -C doc clean
           make -C doc html SPHINXERRWARN="-W"
         env:
-          PYSYC_DOC_BUILD_VERSION: 23_1
+          PYSYC_DOC_BUILD_VERSION: ${{ env.DOC_BUILD_SYC_VERSION }}
 
       - name: Build PDF Documentation
         run: |
@@ -182,7 +183,7 @@ jobs:
           sudo apt-get install -y texlive-latex-extra latexmk
           make -C doc pdf SPHINXERRWARN=""
         env:
-          PYSYC_DOC_BUILD_VERSION: 23_1
+          PYSYC_DOC_BUILD_VERSION: ${{ env.DOC_BUILD_SYC_VERSION }}
           extra_mem_bot: 10000000
           extra_mem_top: 15000000
 
