--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ env:
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
+  DOC_BUILD_SYC_VERSION: 23_2
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -47,7 +48,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, ubuntu-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
 
     steps:
       - name: "Build wheelhouse and perform smoke test"
@@ -80,16 +81,15 @@ jobs:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
 
-      - name: Pull docker image
-        run: make docker-pull
-        env:
-          SYC_IMAGE_TAG: v23.1.0
+      - name: Generate API for v231
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v23.1.0
 
-      - name: Generate API code
-        run: make generate-api
-        env:
-          SYC_LAUNCH_CONTAINER: 1
-          SYC_IMAGE_TAG: v23.1.0
+      - name: Generate API for v232
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v23.2.0
 
       - name: Clean out dist
         run: rm -rf dist
@@ -134,26 +134,18 @@ jobs:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
 
-      - name: Pull docker image
-        run: make docker-pull
-        env:
-          SYC_IMAGE_TAG: v23.1.0
-
-      - name: Unit testing
-        run: |
-          pytest -v --cov=ansys.systemcoupling --cov-report xml --cov-report html:cov_html --cov-report term:skip-covered --cov-config=.coveragerc
-        env:
-          SYC_IMAGE_TAG: v23.1.0
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-
-      - name: Upload test coverage
-        uses: actions/upload-artifact@v3
+      - name: Unit Test v23.1.0
+        uses: ./.github/actions/unit-test
         with:
-          name: HTML-coverage-syc
-          path: cov_html
-          retention-days: 7
+          image-tag: v23.1.0
+          upload-coverage: false
+
+      - name: Unit Test v23.2.0
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: v23.2.0
+          upload-coverage: true
+
 
   docs:
     name: Build Documentation
@@ -183,7 +175,7 @@ jobs:
           make -C doc clean
           make -C doc html SPHINXERRWARN="-W"
         env:
-          PYSYC_DOC_BUILD_VERSION: 23_1
+          PYSYC_DOC_BUILD_VERSION: ${{ env.DOC_BUILD_SYC_VERSION }}
 
       - name: Build PDF Documentation
         run: |
@@ -191,7 +183,7 @@ jobs:
           sudo apt-get install -y texlive-latex-extra latexmk
           make -C doc pdf SPHINXERRWARN=""
         env:
-          PYSYC_DOC_BUILD_VERSION: 23_1
+          PYSYC_DOC_BUILD_VERSION: ${{ env.DOC_BUILD_SYC_VERSION }}
           extra_mem_bot: 10000000
           extra_mem_top: 15000000
 
