--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
 
 env:
   MAIN_PYTHON_VERSION: "3.8"
+  # Doc build dependencies now need Python >= 3.9.  For now, bump version for doc
+  # build only but consider bumping main version and delete this:
   DOC_PYTHON_VERSION: "3.9"
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
