--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -27,6 +27,8 @@ Vocab = ANSYS
 # Apply the following styles
 BasedOnStyles = Vale, Google
 
+TokenIgnores = (:(func|class|meth|attr|py):`(?:.|\n)*?`)|(<.*>)|(.. code::.*\n| .*)
+
 # Removing Google-specific rule - Not applicable under some circumstances
 Google.Colons = NO
 Google.Quotes = NO
