--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,13 +1,16 @@
 documentation:
-- doc/source/**/*
-- README.rst
+- changed-files:
+  - any-glob-to-any-file: ['doc/source/**/*', 'examples/**/*', README.rst]
 maintenance:
-- .github/**/*
-- .flake8
-- pyproject.toml
+- changed-files:
+  - any-glob-to-any-file: ['.github/**/*', 'codecov.yml', '.coveragerc', '.flake8', '.pre-commit-config.yaml', 'pyproject.toml']
 dependencies:
-- pyproject.toml
+- changed-files:
+  - any-glob-to-any-file: ['pyproject.toml']
 enhancement:
 - src/**
 testing:
 - tests/**
+CI/CD:
+- changed-files:
+  - any-glob-to-any-file: ['.github/**/*', '.ci/**/*']
