--- a/.github/actions/build-library/action.yml
+++ b/.github/actions/build-library/action.yml
@@ -66,7 +66,7 @@ runs:
 
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
-      if: ${{ input.checkout == 'true' }}
+      if: inputs.checkout == 'true'
 
     - name: "Set up Python"
       uses: ansys/actions/_setup-python@main
