--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,7 @@ on:
       - main
 
 env:
-  MAIN_PYTHON_VERSION: "3.8"
-  # Doc build dependencies now need Python >= 3.9.  For now, bump version for doc
-  # build only but consider bumping main version and delete this:
-  DOC_PYTHON_VERSION: "3.9"
+  MAIN_PYTHON_VERSION: "3.9"
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
@@ -51,7 +48,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     steps:
       - name: "Build wheelhouse and perform smoke test"
@@ -94,6 +91,13 @@ jobs:
           image-tag: v23.2.0
 
       - name: Generate API for v241
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v24.1.0
+
+      # NB: try this in PR, but comment out before merging
+      #     uncomment after first SyC release targeting 24.1
+      - name: Generate API for v242
         uses: ./.github/actions/generate-api
         with:
           image-tag: latest
@@ -158,6 +162,13 @@ jobs:
       - name: Unit Test v24.1.0
         uses: ./.github/actions/unit-test
         with:
+          image-tag: v24.1.0
+          upload-coverage: false
+
+      # TODO comment out as for API generation
+      - name: Unit Test v24.2.0
+        uses: ./.github/actions/unit-test
+        with:
           image-tag: latest
           upload-coverage: false
 
@@ -172,7 +183,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.DOC_PYTHON_VERSION }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
       - name: Download package
         uses: actions/download-artifact@v4
