Sync black version change in pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ exclude: ^(doc/source/examples)
 # initially copied from pymapdl
 repos:
 - repo: https://github.com/psf/black
-  rev: 24.3.0  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
+  rev: 24.4.2  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY -  ALSO: check pyproject.toml
   hooks:
   - id: black
 
@@ -12,10 +12,10 @@ repos:
   rev: 1.16.0
   hooks:
   -   id: blacken-docs
-      additional_dependencies: [black==24.3.0]
+      additional_dependencies: [black==24.4.2] # Ensure synced with black version above
 
 - repo: https://github.com/pycqa/isort
-  rev: 5.13.2
+  rev: 5.13.2 # Should be in sync with version in pyproject.toml
   hooks:
   - id: isort
 
